tree-sitter/test/corpus/basics.txt
==================
Simple symbol
==================

foo

---

(source_file
  (symbol))

==================
Simple integer
==================

42

---

(source_file
  (int))

==================
Simple float
==================

3.14

---

(source_file
  (float))

==================
Simple bigint
==================

12345678901234567890N

---

(source_file
  (bigint))

==================
Simple bigdec
==================

3.14159265358979323846M

---

(source_file
  (bigdec))

==================
Simple string
==================

"hello"

---

(source_file
  (string))

==================
Simple list
==================

(foo bar)

---

(source_file
  (list
    (symbol)
    (symbol)))

==================
Simple vector
==================

[1 2 3]

---

(source_file
  (vector
    (int)
    (int)
    (int)))

==================
Simple record with member keys
==================

{.a 1}

---

(source_file
  (record
    (dot_symbol)
    (int)))

==================
Standalone member
==================

.foo

---

(source_file
  (dot_symbol))

==================
Member call
==================

.foo(x)

---

(source_file
  (call
    (dot_symbol)
    (symbol)))

==================
Simple set
==================

#{1 2}

---

(source_file
  (set
    (int)
    (int)))

==================
Nested list
==================

(foo (bar baz))

---

(source_file
  (list
    (symbol)
    (list
      (symbol)
      (symbol))))

==================
Simple call
==================

foo(a, b)

---

(source_file
  (call
    (symbol)
    (symbol)
    (symbol)))

==================
Dotted name (namespace or class) is a symbol
==================

java.time.Instant

---

(source_file
  (symbol))

==================
Qualified symbol (ns/member)
==================

java.time.Instant/now

---

(source_file
  (qualified_symbol))

==================
Qualified symbol call
==================

java.time.Instant/now()

---

(source_file
  (call
    (qualified_symbol)))

==================
Simple qualified symbol
==================

foo/bar

---

(source_file
  (qualified_symbol))

==================
Qualified symbol with args
==================

math/add(1, 2)

---

(source_file
  (call
    (qualified_symbol)
    (int)
    (int)))

==================
Symbol with gensym suffix
==================

foo#

---

(source_file
  (symbol))

==================
Gensym in quoted list
==================

'(let [tmp# x] tmp#)

---

(source_file
  (quote
    (list
      (symbol)
      (vector
        (symbol)
        (symbol))
      (symbol))))

==================
Qualified symbol with gensym suffix
==================

ns/foo#

---

(source_file
  (qualified_symbol))

==================
Simple quote
==================

'foo

---

(source_file
  (quote
    (symbol)))

==================
Quote list
==================

'(1 2 3)

---

(source_file
  (quote
    (list
      (int)
      (int)
      (int))))

==================
Simple unquote
==================

~foo

---

(source_file
  (unquote
    (symbol)))

==================
Unquote in quote
==================

'(1 ~x 3)

---

(source_file
  (quote
    (list
      (int)
      (unquote
        (symbol))
      (int))))

==================
Simple unquote-splice
==================

~@xs

---

(source_file
  (unquote_splice
    (symbol)))

==================
Unquote-splice in quote
==================

'(a ~@xs b)

---

(source_file
  (quote
    (list
      (symbol)
      (unquote_splice
        (symbol))
      (symbol))))

==================
Syntax quote symbol
==================

`foo

---

(source_file
  (syntax_quote
    (symbol)))

==================
Syntax quote qualified symbol
==================

`brj.core/count

---

(source_file
  (syntax_quote
    (qualified_symbol)))

==================
Syntax quote of a list
==================

`(foo ~x)

---

(source_file
  (syntax_quote
    (list
      (symbol)
      (unquote
        (symbol)))))

==================
Metadata with member
==================

^.test foo

---

(source_file
  (metadata
    (dot_symbol)
    (symbol)))

==================
Metadata with record
==================

^{.a 1} foo

---

(source_file
  (metadata
    (record
      (dot_symbol)
      (int))
    (symbol)))

==================
Stacked metadata
==================

^.a ^.b foo

---

(source_file
  (metadata
    (dot_symbol)
    (metadata
      (dot_symbol)
      (symbol))))

==================
Metadata on vector
==================

^.test [1 2 3]

---

(source_file
  (metadata
    (dot_symbol)
    (vector
      (int)
      (int)
      (int))))

==================
Record sugar
==================

Foo{.name "James", .age 42}

---

(source_file
  (record_sugar
    (symbol)
    (dot_symbol)
    (string)
    (dot_symbol)
    (int)))

==================
Record sugar with qualified symbol
==================

ns/Foo{.name "James"}

---

(source_file
  (record_sugar
    (qualified_symbol)
    (dot_symbol)
    (string)))

==================
Optional member access
==================

.?foo

---

(source_file
  (dot_symbol))

==================
Qualified member
==================

ns/.member

---

(source_file
  (qualified_dot_symbol))

==================
Bare dot symbol
==================

.toMillis

---

(source_file
  (dot_symbol))

==================
Qualified dot symbol
==================

Dur/.toMillis

---

(source_file
  (qualified_dot_symbol))

==================
Qualified dot symbol call
==================

Dur/.toMillis(d)

---

(source_file
  (call
    (qualified_dot_symbol)
    (symbol)))

==================
Bare hash symbol
==================

#

---

(source_file
  (symbol))

==================
Hash-digit symbol
==================

#0

---

(source_file
  (symbol))

==================
Negative integer literal
==================

-1

---

(source_file
  (int))

==================
Negative float literal
==================

-3.14

---

(source_file
  (float))

==================
Negative bigint literal
==================

-42N

---

(source_file
  (bigint))

==================
Negative bigdec literal
==================

-3.14M

---

(source_file
  (bigdec))

==================
Bare dash symbol
==================

-

---

(source_file
  (symbol))

==================
Dash-prefixed symbol
==================

-foo

---

(source_file
  (symbol))

==================
Dash-prefixed symbol with a digit later on
==================

--1

---

(source_file
  (symbol))

==================
Negative literal immediately followed by a symbol
==================

-1foo

---

(source_file
  (int)
  (symbol))

==================
Dash keyword immediately followed by a digit
==================

:-1

---

(source_file
  (keyword)
  (int))
