tree-sitter/test/corpus/method_call.txt
==================
Method call on symbol
==================

foo.bar(a)

---

(source_file
  (method_call
    (symbol)
    (dot_symbol)
    (symbol)))

==================
Method call on int
==================

42.toString()

---

(source_file
  (method_call
    (int)
    (dot_symbol)))

==================
Method call on string
==================

"hello".length()

---

(source_file
  (method_call
    (string)
    (dot_symbol)))

==================
Method call on list
==================

(foo bar).first()

---

(source_file
  (method_call
    (list
      (symbol)
      (symbol))
    (dot_symbol)))

==================
Method call on vector
==================

[1 2 3].map(f)

---

(source_file
  (method_call
    (vector
      (int)
      (int)
      (int))
    (dot_symbol)
    (symbol)))

==================
Method call on call
==================

foo(a).bar(b)

---

(source_file
  (method_call
    (call
      (symbol)
      (symbol))
    (dot_symbol)
    (symbol)))

==================
Chained method calls
==================

foo.bar().baz()

---

(source_file
  (method_call
    (method_call
      (symbol)
      (dot_symbol))
    (dot_symbol)))
